# caro_project_be

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  package.json  patch_db.sh  tsconfig.json
.github/workflows/: main.yml
rust/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
rust/src/: config.rs  db.rs  main.rs
rust/src/routes/: history.rs  mod.rs  rooms.rs  users.rs
rust/src/sockets/: mod.rs
src/: app.ts  config.ts  db.rs  main.rs  server.ts  store.rs  store.ts  types.rs  types.ts
src/db/: index.ts  schema.ts
src/routes/: health.rs  history.route.ts  history.rs  rooms.route.ts  rooms.rs  users.route.ts
src/sockets/: index.ts  mod.rs
